# sql-ai

./: .gitignore  COMMANDS.md  README.md  SETUP.md  debug_schema.py  pyproject.toml  requirements.txt
examples/: ecommerce_schema.sql
sqlgenx/cli/: main.py
sqlgenx/cli/commands/: cache.py  config.py  connect.py  diagnose.py  enrich.py  execute.py  generate.py  load.py  switch.py  validate.py
sqlgenx/core/: data_analyzer.py  db_connector.py  graph.py  llm_engine.py  schema_loader.py  schema_manager.py  semantic_enricher.py  semantic_validator.py  validator.py  vector_store.py
sqlgenx/core/cache/: __init__.py  manager.py
sqlgenx/core/rate_limiting/: __init__.py  limiter.py
sqlgenx/utils/: config_manager.py  helpers.py  output_sanitizer.py  rich_helpers.py  workspace_manager.py
tests/: test_loader.py
